--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react"
+    "jsx": "react",
+    "baseUrl": ".",
+    "sourceMap": true,
+    "paths": {
+      "@app/*": [
+        "./src/*"
+      ],
+    }
   },
   "include": [
     "src"
