--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,3 @@
-// 20200209220154
-// https://raw.githubusercontent.com/MSLacerda/brisanet-web/develop/tsconfig.json?token=AIITYHLWDZI55L6NPYT3X6K6JHTAC
-
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -29,17 +26,15 @@
       "dom",
       "es2017"
     ],
-    "paths": {
-      "@app/*": [
-        "./src/*"
-      ],
-    },
     "forceConsistentCasingInFileNames": true,
     "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true
   },
   "exclude": [
-    "node_modules",
+    "node_modules"
+  ],
+  "include": [
+    "src"
   ]
 }
